# appRover-backend

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test.py
approver_backend/api/: __init__.py  core.py  data_classes.py  helpers.py
approver_backend/api/auth/: core.py  routes.py
approver_backend/api/files/: __init__.py  core.py  routes.py
approver_backend/api/invites/: __init__.py  core.py  routes.py
approver_backend/api/polls/: __init__.py  core.py  routes.py
approver_backend/api/user/: __init__.py  core.py  routes.py
approver_backend/database/: __init__.py  core.py  enums.py
approver_backend/database/data_classes/: __init__.py  file.py  poll.py  share_poll_link.py  user.py
approver_backend/database/dataclasses/: core.py  poll.py
approver_backend/database/methods/: __init__.py  files.py  invite.py  invites.py  poll.py  user.py
approver_backend/database/models/: __init__.py  core.py  file.py  poll.py  poll_users.py  share_poll_link.py  user.py
approver_backend/database/utils/: __init__.py
tests/: config.py  conftest.py  test_users.py
